--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\1.png" alt="First slide">
+          <img class="d-block w-100 img-fluid" src="https://github.com/garyn90/yiannijewelry/blob/master/1.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\2.png" alt="Second slide">
+          <img class="d-block w-100" src="https://github.com/garyn90/yiannijewelry/blob/master/2.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\3.png" alt="Third slide">
+          <img class="d-block w-100" src="https://github.com/garyn90/yiannijewelry/blob/master/3.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\4.png" alt="Fourth slide">
+          <img class="d-block w-100" src="https://github.com/garyn90/yiannijewelry/blob/master/4.png" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\5.png" alt="Fifth slide">
+          <img class="d-block w-100" src="https://github.com/garyn90/yiannijewelry/blob/master/5.png" alt="Fifth slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carou-container" role="button" data-slide="prev">
