--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div id="about-contents" class="container col-md-12">
       <h3 id="header-text">About Us</h3>
       <p>Yianni Jewelry is the premier work of Garbis Khatcherian, also known as Yianni around Athens, Greece. Combining our love for Greek aesthetics with our proud Armenian heritage, Yianni Jewelry seeks to redefine Mediterranean jewelry.</p>
+      <p>We at Yianni Jewelry are committed to delivering quality works, and working with you to make sure it is truly yours.</p>
+      <p>If you have any designs, ideas, or questions, feel free to contact us. We'd be more than happy to work with you.</p>
     </div>
     
  
