--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" src="1.png" alt="First slide">
+          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\1.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="2.png" alt="Second slide">
+          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\2.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="3.png" alt="Third slide">
+          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\3.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="4.png" alt="Fourth slide">
+          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\4.png" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="5.png" alt="Fifth slide">
+          <img class="d-block w-100" src="D:\code\yannijewelry\images\carousel\5.png" alt="Fifth slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carou-container" role="button" data-slide="prev">
@@ -64,19 +64,23 @@
     <div id="about-contents" class="container col-md-12">
       <div id="interior-text">
       <h3 id="header-text">About Us</h3>
-      <p>Yianni Jewelry is the premier work of Garbis Khatcherian, also known as Yianni around Athens, Greece. 
-      Combining our love for Greek aesthetics with our proud Armenian heritage, 
+      <p>Yianni Jewelry is the premier work of Garbis Khatcherian, also known as Yianni around Athens, Greece.</p>
+     <p>Combining our love for Greek aesthetics with our proud Armenian heritage, 
       Yianni Jewelry seeks to redefine Mediterranean jewelry.</p>
       </div>
     </div>
-    <div id="about-contents" class="container col-md-12">
+    <div id="about-contents2" class="container col-md-12">
       <div id="interior-text"> 
-        <h3 id="header-text">What We Do</h3>
+        <h3 id="header-text2">What We Do</h3>
         <p>We specialize in silver, intricate jewel patterns, and customizing each piece to your heart's desire.</p>
         <p>We at Yianni Jewelry are committed to delivering quality works, and working with you to make sure it is truly yours.</p>
       </div>
     </div>
-    <div class="container">
+    <div id="about-contents" class="container col-md-12">
+      <div id="interior-text">
+        <h3 id="header-text">Next Page</h3>
+      </div>
+      
       
     </div>
  
