--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="D:\code\yannijewelry\styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
@@ -34,19 +34,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\1.png" alt="First slide">
+          <img class="d-block w-100 img-fluid" src="1.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\2.png" alt="Second slide">
+          <img class="d-block w-100 img-fluid" src="2.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\3.png" alt="Third slide">
+          <img class="d-block w-100 img-fluid" src="3.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\4.png" alt="Fourth slide">
+          <img class="d-block w-100 img-fluid" src="4.png" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" src="D:\code\yannijewelry\images\carousel\5.png" alt="Fifth slide">
+          <img class="d-block w-100 img-fluid" src="5.png" alt="Fifth slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carou-container" role="button" data-slide="prev">
