--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div id="about-contents2" class="col">
+        <div id="about-contents2" class="col-sm-12 col-md-6">
         <h3 id="header-text">Necklaces</h3>
         <!--Necklace Carousel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="neck_carousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel" data-slide-to="1"></li>
-            <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#neck_carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#neck_carousel" data-slide-to="1"></li>
+            <li data-target="#neck_carousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -97,25 +97,25 @@
               <img class="d-block img-fluid" src="neck3.jpg" alt="Third slide">
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#neck_carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#neck_carousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div> <!--End of Carousel-->
         <button id="white-btn" type="button" class="btn btn-outline-primary btn-lg">Shop</button>
         </div>
-        <div id="about-contents2" class="col"> 
+        <div id="about-contents2" class="col-sm-12 col-md-6"> 
         <h3 id="header-text">Rings</h3>
         <p id="p-text">We specialize in silver, intricate jewel patterns, and customizing each piece to your heart's desire.</p>
         <p id="p-text">We are committed to delivering quality works, and working with you to make sure it is truly yours.</p>
         <button id="white-btn" type="button" class="btn btn-outline-primary btn-lg">Shop</button>
-      </div>
-    </div> <!-- End of Row-->
-    </div> <!-- End of Container-->
+        </div>
+        </div> <!-- End of Row-->
+        </div> <!-- End of Container-->
 
     <div id="container-contents" class="container-fluid">
       <div class="row">
@@ -131,13 +131,13 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div id="about-contents2" class="col">
+        <div id="about-contents2" class="col-sm-12 col-md-6">
         <h3 id="header-text">Bracelets</h3>
         <p id="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         <p id="p-text">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <p id="p-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <div id="about-contents2" class="col"> 
+        <div id="about-contents2" class="col-sm-12 col-md-6"> 
         <h3 id="header-text">Other</h3>
         <p id="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         <p id="p-text">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -156,5 +156,3 @@
   </body>
 </html>
 
-
-      
