--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="D:\code\yannijewelry\styles.css">
     <!--Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
   </head>
-  </head>
+
+
+
   <body>
     <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
       <a href="#" ><h1 id="logo" class="navbar-brand">Yianni Jewelry</h1></a>
@@ -67,13 +69,13 @@
 
    <!-- Everything below is underneath the carousel-->
 
-    <div id="container-contents" class="container-fluid">
+  <div id="container-contents" class="container-fluid">
       <div class="row">
       <div id="about-contents" class="col">
         <h3 id="header-text">Yianni Jewelry</h3>
-        <p id="p-text">We love to combine our proud Armenian heritage with Greek aesthetics.</p>
+        <p id="p-text">We love to combine our proud Armenian heritage with Greek & Mediterranean aesthetics.</p>
         <p id="p-text">Each piece of jewelry we make is made with you in mind.</p>
-        <p id="p-text">We are committed to delivering quality works, and working with you to make sure it is truly yours.</p>
+        <p id="p-text">We are committed to creating quality works, and working with you to make sure it is truly yours.</p>
 
       </div>
     </div>
