--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 
 
-   <!-- Everything below is underneath the carousel-->
+    <!-- Everything below is underneath the carousel-->
 
-  <div id="container-contents" class="container-fluid">
+    <div id="container-contents" class="container-fluid">
       <div class="row">
       <div id="about-contents" class="col">
         <h3 id="header-text">Yianni Jewelry</h3>
@@ -94,13 +94,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="neck1.jpg" alt="First slide">
+              <img class="d-block w-100 img-fluid" src="neck1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="neck2.png" alt="Second slide">
+              <img class="d-block w-100 img-fluid" src="neck2.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="neck3.jpg" alt="Third slide">
+              <img class="d-block w-100 img-fluid" src="neck3.jpg" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#neck_carousel" role="button" data-slide="prev">
@@ -119,14 +119,14 @@
         <p id="p-text">We specialize in silver, intricate jewel patterns, and customizing each piece to your heart's desire.</p>
         <p id="p-text">We are committed to delivering quality works, and working with you to make sure it is truly yours.</p>
         <button id="white-btn" type="button" class="btn btn-outline-primary btn-lg">Shop</button>
-        </div>
-        </div> <!-- End of Row-->
-        </div> <!-- End of Container-->
+      </div>
+    </div> <!-- End of Row-->
+    </div> <!-- End of Container-->
 
     <div id="container-contents" class="container-fluid">
       <div class="row">
       <div id="about-contents" class="col">
-        <h3 id="header-text">Goals</h3>
+        <h3 id="header-text">Our Mission</h3>
         <p id="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         <p id="p-text">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <p id="p-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -161,4 +161,3 @@
 
   </body>
 </html>
-
